# ActionChess-VK-EDU

./: CMakeLists.txt  Client.cpp  Client.hpp  Controller.cpp  Controller.hpp  README.md  Read.me  VM setup  main.cpp
Board/: Board.cpp  Board.h  Board.hpp  CMakeLists.txt
Connection/: CMakeLists.txt
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Figure/: CMakeLists.txt  Figure.cpp  Figure.h
GroupFigure/: CMakeLists.txt  GroupFigure.cpp  GroupFigure.h
Handler/: Handler.h
Message/: CMakeLists.txt  Request.cpp  Response.cpp
Message/include/: Message.h  Request.hpp  Responce.hpp
Sprite/: CMakeLists.txt  Sprite.cpp  Sprite.h  Sprite.hpp
common/: CMakeLists.txt
common/include/logger/: Logger.hpp
common/include/message/: Message.hpp  Request.hpp  RequestQueue.hpp  Response.hpp  WriteBufferSequence.hpp
common/include/user/: User.hpp
common/src/message/: Message.cpp  Request.cpp  Response.cpp
graphics/: CMakeLists.txt
graphics/include/: Assets.hpp  BasicWindow.hpp  CursorController.hpp  MainMenu.hpp  Variables.hpp  WindowSwitcher.hpp  file_path.hpp
graphics/include/Client/: Client.hpp  Message.hpp  Request.hpp  Response.hpp
graphics/include/Controller/: BasicController.hpp  MenuController.hpp  RoomController.hpp
graphics/include/Model/: BasicModel.hpp  MenuModel.hpp  RoomModel.hpp
graphics/include/Stages/: BasicStage.hpp  MenuStage.hpp  RoomStage.hpp
graphics/include/View/: BasicView.hpp  MenuView.hpp  RoomView.hpp
graphics/include/Widgets/: BasicWidget.hpp  Button.hpp  Slidebar.hpp  Table.hpp  TextBox.hpp
graphics/src/: Assets.cpp  BasicWindow.cpp  CursorController.cpp  WindowSwitcher.cpp
graphics/src/Client/: Client.cpp  Message.cpp  Request.cpp  Response.cpp
graphics/src/Controller/: MenuController.cpp  RoomController.cpp
graphics/src/Model/: MenuModel.cpp  RoomModel.cpp
graphics/src/Stages/: BasicStage.cpp  MenuStage.cpp  RoomStage.cpp
graphics/src/View/: BasicView.cpp  MenuView.cpp  RoomView.cpp
graphics/src/Widgets/: Button.cpp  Slidebar.cpp  Table.cpp  Textbox.cpp
graphis/include/: Assets.hpp  Variables.hpp  WindowSwitcher.hpp
graphis/include/Controller/: BasicController.hpp  MenuController.hpp
graphis/include/Model/: BasicModel.hpp  MenuModel.hpp
graphis/include/Stages/: BasicStage.hpp  MenuStage.hpp
graphis/include/View/: BasicView.hpp  MenuView.hpp
graphis/src/: Assets.cpp  WindowSwitcher.cpp
graphis/src/controller/: MenuController.cpp
graphis/src/stages/: MenuStage.cpp
graphis/src/view/: MenuView.cpp
include/: BasicWidget.hpp
interfaces/: bishop.h  field.h  figure.h  figure_handler.h  game.h  king.h  knight.h  message_queue.h  pawn.h  queen.h  rock.h  sender.h  tile.h
logic/: Game.cpp  MsgQueue.cpp  message_queue.cpp
msgQueue/: CMakeLists.txt  msgQueue.cpp  msgQueue.hpp
network-test/client/client/: main.cpp
network-test/client/common/include/message/: Message.hpp  Request.hpp  Response.hpp  WriteBufferSequence.hpp
network-test/client/server/: CMakeLists.txt  main.cpp
rules/: bishop.cpp  field.cpp  figure.cpp  figure_handler.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  queen.cpp  rock.cpp  tile.cpp
server/: CMakeLists.txt  main.cpp
server/lib/server/: CMakeLists.txt
server/lib/server/include/: Connection.hpp  Server.hpp  Session.hpp  User.hpp
server/lib/server/include/game/logic/: Game.hpp  MessageQueue.hpp
server/lib/server/include/game/rules/: Bishop.hpp  Figure.hpp  FigureHandler.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp  Tile.hpp
server/lib/server/include/handler/: GameHandler.hpp  Handler.hpp  RoomHandler.hpp
server/lib/server/include/message/: Message.hpp  Request.hpp  Response.hpp
server/lib/server/include/net/: Connection.hpp  Server.hpp  Session.hpp
server/lib/server/include/room/: GameRoom.hpp  Room.hpp  RoomController.hpp
server/lib/server/src/: Connection.cpp  Server.cpp  Session.cpp
server/lib/server/src/game/logic/: Game.cpp  MessageQueue.cpp
server/lib/server/src/game/rules/: Bishop.cpp  Field.cpp  Figure.cpp  FigureHandler.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Tile.cpp  sender.cpp
server/lib/server/src/handler/: GameHandler.cpp  Handler.cpp  RoomHandler.cpp
server/lib/server/src/message/: Request.cpp  Response.cpp
server/lib/server/src/net/: Connection.cpp  Server.cpp  Session.cpp
server/lib/server/src/room/: GameRoom.cpp  Room.cpp  RoomController.cpp
settings/: dh2048.pem  server.crt  server.csr  server.key
src/: BoardTable.cpp  BoardTable.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Figure.cpp  Figure.hpp  GroupFigure.cpp  GroupFigure.hpp  Message.cpp  Message.hpp  MsgQueue.cpp  MsgQueue.hpp  Request.cpp  Response.cpp  Response.hpp  Sprite.cpp  Sprite.hpp
