cmake_minimum_required(VERSION 3.0.0)
project(engine_lib)

set(ENGINE_LIB_LIBRARIES)
set(FENGINE_LIB_INCLUDE_DIRS)

add_subdirectory(GroupFigure)
add_subdirectory(Board)

message("GROUPFIGURE_LIB_INCLUDE_DIRS = ${GROUPFIGURE_LIB_INCLUDE_DIRS}")
message("GROUPFIGURE_LIB_LIBRARIES = ${GROUPFIGURE_LIB_LIBRARIES}")
message("GROUPFIGURE_LIB_INCLUDE_DIRS = ${BOARD_LIB_INCLUDE_DIRS}")
message("GROUPFIGURE_LIB_LIBRARIES = ${BOARD_LIB_LIBRARIES}")

add_executable(${PROJECT_NAME} Engine.cpp)

target_include_directories(${PROJECT_NAME} PUBLIC ${GROUPFIGURE_LIB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${GROUPFIGURELIB_LIBRARIES})

target_include_directories(${PROJECT_NAME} PUBLIC ${BOARD_LIB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${BOARD_LIB_LIBRARIES})

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(ENGINE_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(ENGINE_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)