cmake_minimum_required(VERSION 3.0.0)
project(groupfigure_lib)

set(GROUPFIGURE_LIB_LIBRARIES)
set(GROUPFIGURE_LIB_INCLUDE_DIRS)

add_subdirectory(Figure)


message("FIGURE_LIB_INCLUDE_DIRS = ${FIGURE_LIB_INCLUDE_DIRS}")
message("FIGURE_LIB_LIBRARIES = ${FIGURE_LIB_LIBRARIES}")

add_executable(${PROJECT_NAME} GroupFigure.cpp)


target_include_directories(${PROJECT_NAME} PUBLIC ${FIGURE_LIB_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${FIGURE_LIB_LIBRARIES})

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(GROUPFIGURE_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(GROUPFIGURE_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)