cmake_minimum_required(VERSION 3.0.0)
project(message_lib)

set(MESSAGE_LIB_LIBRARIES)
set(MESSAGE_LIB_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(MESSAGE_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(MESSAGE_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)