cmake_minimum_required(VERSION 3.0.0)
project(client_lib)

set(CLIENT_LIB_LIBRARIES)
set(CLIENT_LIB_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})


add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(CLIENT_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(CLIENT_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

